Fixed bug with too short ui-button in Firefox

--- a/Stylesheets/style.css
+++ b/Stylesheets/style.css
@@ -26,7 +26,7 @@ body {
 }
 
 .ui-selectmenu-button {
-  max-width: 4.2rem;
+  max-width: 4.25rem;
   height: 0.5rem;
   padding: 0.1rem 0 0.6rem 0.5rem !important;
 }
